# SparseBase

./: .buildinfo  .format.bash  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  Config.cmake.in  Doxyfile  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/: CMakeLists.txt  example_1  example_1.cpp  example_conversion  example_conversion.cpp  run_all_examples.py
examples/amd_order/: CMakeLists.txt  amd_order.cc
examples/array_example/: CMakeLists.txt  array_example.cu
examples/csr_coo/: CMakeLists.txt  csr_coo.cc
examples/cuda_example/: CMakeLists.txt  cuda_example.cu
examples/custom_converter/: CMakeLists.txt  custom_converter.cc  custom_converter.cpp
examples/custom_experiment/: CMakeLists.txt  custom_experiment.cc
examples/custom_format/: CMakeLists.txt  custom_format.cc  custom_format.cpp
examples/custom_order/: CMakeLists.txt  custom_order.cc  custom_order.cpp
examples/data/: ash958.mtx  small.tns
examples/degree_distribution/: CMakeLists.txt  degree_distribution.cc  degree_distribution.cpp
examples/degree_order/: CMakeLists.txt  degree_order.cc  degree_order.cpp
examples/download_module/: CMakeLists.txt  download_module.cc
examples/example_1/: CMakeLists.txt  example_1.cpp
examples/example_experiment/: CMakeLists.txt  example_experiment.cc  example_experiment.cu
examples/experiment/: CMakeLists.txt  experiment.cc
examples/features/: CMakeLists.txt  build.sh  feature.cc
examples/format_conversion/: CMakeLists.txt  example_conversion.cpp  format_conversion.cc
examples/gray_order/: CMakeLists.txt  gray_order.cc
examples/linear_solver/: CMakeLists.txt  linear_solver.cc
examples/metis_partition/: CMakeLists.txt  metis_partition.cc
examples/mtkahypar_partition/: CMakeLists.txt  mtkahypar_partition.cc
examples/rcm_order/: CMakeLists.txt  rcm_order.cc  rcm_order.cpp
examples/sparse_feature/: CMakeLists.txt  sparse_feature.cc  sparse_feature.cpp
examples/sparse_format/: CMakeLists.txt  csr_coo.cpp
examples/sparse_reader/: CMakeLists.txt  sparse_reader.cc  sparse_reader.cpp
examples/tns_reader/: CMakeLists.txt  tns_reader.cc
sparsebase/: CMakeLists.txt
sparsebase/include/sparsebase/: SparseConverter.hpp  SparseException.hpp  SparseFormat.hpp  SparseObject.hpp  SparsePreprocess.hpp  SparseProcess.hpp  SparseReader.hpp  sparse_converter.cc  sparse_converter.h  sparse_converter.hpp  sparse_exception.h  sparse_exception.hpp  sparse_feature.h  sparse_format.h  sparse_format.hpp  sparse_object.h  sparse_object.hpp  sparse_preprocess.cc  sparse_preprocess.h  sparse_preprocess.hpp  sparse_reader.h  sparse_reader.hpp
sparsebase/src/: SparseConverter.cpp  SparseFormat.cpp  SparseObject.cpp  SparsePreprocess.cpp  SparseProcess.cpp  SparseReader.cpp  sparse_converter.cc  sparse_converter.cpp  sparse_feature.cc  sparse_format.cc  sparse_format.cpp  sparse_object.cc  sparse_object.cpp  sparse_preprocess.cc  sparse_preprocess.cpp  sparse_reader.cc  sparse_reader.cpp
sparsebase/src/init/: sparse_converter.inc  sparse_feature.inc  sparse_format.inc  sparse_object.inc  sparse_preprocess.inc  sparse_preprocess_instance.inc  sparse_reader.inc
src/: .SparseObject.cpp.swp  .SparseObject.hpp.swp  .Tensor.hpp.swp  .main.cpp.swp  CMakeLists.txt  Ordering.hpp  SparseFormat.hpp  SparseObject.hpp  SparseProcess.hpp  SparseReader.hpp  Tensor.hpp  class_instantiation_list.json  generate_explicit_instantiations.py  main.cpp
src/cmake/: add_opt_library.cmake  generate_explicit_instantiations.cmake  generate_instantiations.cmake
src/sparsebase/: config.h.in  cuda.cu  cuda.cuh  sparse_converter.cc  sparse_converter.cu  sparse_converter.h  sparse_exception.h  sparse_feature.cc  sparse_feature.h  sparse_file_format.h  sparse_format.cc  sparse_format.cu  sparse_format.h  sparse_object.cc  sparse_object.h  sparse_preprocess.cc  sparse_preprocess.cu  sparse_preprocess.h  sparse_reader.cc  sparse_reader.h  sparse_writer.cc  sparse_writer.h  sparsebase.h
src/sparsebase/bases/: graph_feature_base.h  iobase.h  reorder_base.h
src/sparsebase/context/: context.cc  context.h  cpu_context.cc  cpu_context.h  cuda_context_cuda.cu  cuda_context_cuda.cuh
src/sparsebase/converter/: converter.cc  converter.h  converter_cuda.cu  converter_cuda.cuh  converter_order_one.cc  converter_order_one.h  converter_order_one_cuda.cu  converter_order_one_cuda.cuh  converter_order_two.cc  converter_order_two.h  converter_order_two_cuda.cu  converter_order_two_cuda.cuh  converter_store.cc  converter_store.h
src/sparsebase/cuda/: converter.cu  converter.cuh  format.cu  format.cuh  preprocess.cu  preprocess.cuh
src/sparsebase/experiment/: concrete_experiment.cc  concrete_experiment.h  experiment.cc  experiment.h  experiment_helper.h  experiment_type.h
src/sparsebase/feature/: avg_degree.cc  avg_degree.h  avg_degree_column.cc  avg_degree_column.h  bandwidth.cc  bandwidth.h  coefficient_of_variation_degree.cc  coefficient_of_variation_degree.h  coefficient_of_variation_degree_column.cc  coefficient_of_variation_degree_column.h  degree_distribution.cc  degree_distribution.h  degrees.cc  degrees.h  degrees_degree_distribution.cc  degrees_degree_distribution.h  extractor.cc  extractor.h  feature.cc  feature.h  feature_extractor.cc  feature_extractor.h  feature_preprocess_type.cc  feature_preprocess_type.h  geometric_avg_degree.cc  geometric_avg_degree.h  geometric_avg_degree_column.cc  geometric_avg_degree_column.h  jaccard_weights.cc  jaccard_weights.h  jaccard_weights_cuda.cu  jaccard_weights_cuda.cuh  max_degree.cc  max_degree.h  max_degree_column.cc  max_degree_column.h  median_degree.cc  median_degree.h  median_degree_column.cc  median_degree_column.h  (+16 more)
src/sparsebase/format/: array.cc  array.h  coo.cc  coo.h  csc.cc  csc.h  csr.cc  csr.h  cuda_array_cuda.cu  cuda_array_cuda.cuh  cuda_csr_cuda.cu  cuda_csr_cuda.cuh  format.cc  format.h  format_implementation.h  format_order_one.cc  (+5 more)
tests/: CMakeLists.txt  run_test  tests.cpp
tests/suites/: SparseFormat_tests.cpp  feature_tests.cpp
(+1640 files in other folders)
