if (${CUDA})
    add_subdirectory(cuda_example)
    add_subdirectory(array_example)
endif()
if(NOT ${_HEADER_ONLY} OR NOT ${CUDA})
    add_subdirectory(sparse_format)
    add_subdirectory(degree_order)
    add_subdirectory(custom_order)
    add_subdirectory(format_conversion)
    add_subdirectory(rcm_order)
    add_subdirectory(sparse_feature)
    add_subdirectory(sparse_reader)
    add_subdirectory(custom_format)
    add_subdirectory(custom_converter)
endif()
